# flametrace-image-analysis

./: CMakeLists.txt  flametrace.cpp  labelVideo.cpp
analysis/: analyse-results.py  confusion_matrix.py  generate_figures.py  run_all.py
results/: closed-bunsen-converted.lbl  dry-flask-converted.lbl  fire-1-orig-converted.lbl  fire-2-orig-converted.lbl  shaking-pens.lbl  shaking-pink-converted.lbl  solvents-1-converted.lbl  solvents-2.lbl  solvents-3-v-small.lbl  solvents-4.lbl  solvents-5-converted.lbl  video-of-video-converted.lbl
