cmake_minimum_required(VERSION 2.8)
project(flametrace)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(flametrace flametrace.cpp)
add_executable(labelVideo labelVideo.cpp)
target_link_libraries(flametrace ${OpenCV_LIBS})
target_link_libraries(labelVideo ${OpenCV_LIBS})
set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3")
set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -pg")